// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> opens the dropdown when clicked 1`] = `
<DropdownContainer
  onClick={[Function]}
  onClickAway={[Function]}
>
  <Flex
    align="center"
    justify="space-between"
  >
    <div>
      Option 1
    </div>
    <Styled(Icon)
      color="#FFFFFF"
      name="arrowUp"
      size={12}
    />
  </Flex>
  <DropdownMenu
    show={true}
  >
    <DropdownMenuOption
      isActive={false}
      key="0"
      onClick={[Function]}
    >
      Option 1
    </DropdownMenuOption>
    <DropdownMenuOption
      isActive={false}
      key="1"
      onClick={[Function]}
    >
      Option 2
    </DropdownMenuOption>
  </DropdownMenu>
</DropdownContainer>
`;

exports[`<Dropdown /> opens the dropdown when clicked 2`] = `
<DropdownContainer
  onClick={[Function]}
  onClickAway={[Function]}
>
  <Flex
    align="center"
    justify="space-between"
  >
    <div>
      Option 1
    </div>
    <Styled(Icon)
      color="#FFFFFF"
      name="arrowDown"
      size={12}
    />
  </Flex>
  <DropdownMenu
    show={false}
  >
    <DropdownMenuOption
      isActive={false}
      key="0"
      onClick={[Function]}
    >
      Option 1
    </DropdownMenuOption>
    <DropdownMenuOption
      isActive={false}
      key="1"
      onClick={[Function]}
    >
      Option 2
    </DropdownMenuOption>
  </DropdownMenu>
</DropdownContainer>
`;

exports[`<Dropdown /> renders correctly with a selected item 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
}

.c2 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #999999;
}

.c0::-moz-placeholder {
  color: #999999;
}

.c0:-ms-input-placeholder {
  color: #999999;
}

.c0::placeholder {
  color: #999999;
}

.c4 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c6 {
  padding: 12px 16px;
  background-color: #FFFFFF;
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  color: #070707;
}

.c6:not(:last-child) {
  border-bottom: 1px solid #EEEEEE;
}

.c6:hover {
  cursor: pointer;
  background-color: #f2f2f2;
}

.c5 {
  padding: 12px 16px;
  background-color: #f2f2f2;
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  color: #070707;
}

.c5:not(:last-child) {
  border-bottom: 1px solid #EEEEEE;
}

.c5:hover {
  cursor: default;
  background-color: #f2f2f2;
}

.c3 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<div>
  <div
    autoComplete="off"
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div>
        Option 1
      </div>
      <svg
        className="c2 c3"
        color="#FFFFFF"
        height="12px"
        viewBox="0 0 24 24"
        width="12px"
      >
        <path
          d="M0,6.5l12,12,12-12Z"
        />
      </svg>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        Option 1
      </div>
      <div
        className="c6"
        onClick={[Function]}
      >
        Option 2
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> renders correctly with none selected 1`] = `
.c2 {
  display: inline-block;
  vertical-align: middle;
}

.c2 path {
  fill: #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  padding: 15px;
  font-size: 14px;
  border: 2px solid #0A169A;
  border-radius: 3px;
  background: #FFFFFF;
  cursor: pointer;
}

.c0::-webkit-input-placeholder {
  color: #999999;
}

.c0::-moz-placeholder {
  color: #999999;
}

.c0:-ms-input-placeholder {
  color: #999999;
}

.c0::placeholder {
  color: #999999;
}

.c4 {
  position: absolute;
  top: calc(100%);
  left: 0;
  width: 100%;
  z-index: 10;
  border: 1px solid #EEEEEE;
  box-shadow: 0 20px 20px rgba(0,0,0,0.06);
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  opacity: 0;
  -webkit-transform: translateY(20px);
  -ms-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  margin-top: 5px;
}

.c5 {
  padding: 12px 16px;
  background-color: #FFFFFF;
  -webkit-transition: 0.1s ease-in-out all;
  transition: 0.1s ease-in-out all;
  color: #070707;
}

.c5:not(:last-child) {
  border-bottom: 1px solid #EEEEEE;
}

.c5:hover {
  cursor: pointer;
  background-color: #f2f2f2;
}

.c3 {
  margin-left: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<div>
  <div
    autoComplete="off"
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div>
        Option 1
      </div>
      <svg
        className="c2 c3"
        color="#FFFFFF"
        height="12px"
        viewBox="0 0 24 24"
        width="12px"
      >
        <path
          d="M0,6.5l12,12,12-12Z"
        />
      </svg>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        Option 1
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        Option 2
      </div>
    </div>
  </div>
</div>
`;
